@@ -9,6 +9,9 @@ Release 1.6.2	[??? ??, 2009]
 
 Important API Changes:
 	Adding an already added node to a graph or digraph now raises an exception (AdditionError).
+	pygraph.classes.Classname.classname classes were renamed to pygraph.classes.classname.classname.
+	pygraph.algorithms.filters.Filtername.filtername filters were renamed to pygraph.algorithms.filters.filtername.filtername.
+	pygraph.algorithms.heuristics.Heuristicname.heuristicname heuristics were renamed to pygraph.algorithms.heuristics.heuristicname.heuristicname.
 
 
 Release 1.6.1	[Jul 04, 2009]
